<resources>
    <string name="app_name">LoginRegister</string>

    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="Register">Register</string>
    <string name="email">email</string>
    <string name="Welcome">Welcome</string>
    <string name="name">name</string>
    <string name="last_name">Last Name</string>
    <string name="message_question">Tu mensaje de pregunta aquí</string>
    <string name="title_question">Tu título de pregunta aquí</string>
    <string name="Date">Fecha</string>

</resources>